Bug 399323 - Filter dialog does not allow non-numeric characters for a regular expression filter.
Summary: Filter dialog does not allow non-numeric characters for a regular expression ...
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-03 00:44 UTC by Robby Stephenson
Modified: 2018-10-03 01:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2018-10-03 00:44:01 UTC
Filter dialog does not allow non-numeric characters for a regular expression filter.
Comment 1 Robby Stephenson 2018-10-03 01:04:45 UTC
Git commit 47f19fac2fdbbf5c5b5124883043e473f8c44edd by Robby Stephenson.
Committed on 03/10/2018 at 01:03.
Pushed by rstephenson into branch '3.1'.

Fix bug when using regexp filter for number fields

Only use a QIntValidator when the filter rule is not a regular
expression.
FIXED-IN: 3.1.4
FIXED-IN: 3.2

M  +4    -0    ChangeLog
M  +2    -1    src/gui/filterrulewidget.cpp

https://commits.kde.org/tellico/47f19fac2fdbbf5c5b5124883043e473f8c44edd