Fix bug when using regexp filter for number fields

Only use a QIntValidator when the filter rule is not a regular
expression.

BUG: 399323
FIXED-IN: 3.1.4
FIXED-IN: 3.2